turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: type mismatch;
 found   : Array[Int]
 required: Int
  state=rule(state)(ind)
                   ^